objects/Opportunity/fields/PlannedPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedPaymentDate__c</fullName>
    <label>PlannedPaymentDate</label>
    <type>Date</type>
</CustomField>