objects/Opportunity/fields/Priced__c.field-meta.xml
<CustomField>
    <fullName>Priced__c</fullName>
    <description>This field auto changes to PRICED when Dept App is Approved, Price List Correct, Other Product Qty is zero, Mgt App is &lt;&gt; to Rejected, Pricing Notes is blank, Opp name does not start with RS, amount &lt;&gt; to blank or zero.</description>
    <inlineHelpText>This field semi-auto populates - see the Description on this field.
NOT PRICED = either a spreadsheet customer, or one not to be invoiced through Salesforce currently, or to be priced by Accounts.
PRICED = prices are correct.</inlineHelpText>
    <label>Priced</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO INVOICE</fullName>
            </value>
            <value>
                <fullName>PRICED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>