objects/Opportunity/fields/Pricing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Notes__c</fullName>
    <inlineHelpText>These pricing notes are drawn from the Site Contract relating to the service sheet or Reactive Sheet. This is populated via a workflow.</inlineHelpText>
    <label>Pricing Notes</label>
    <type>TextArea</type>
</CustomField>