objects/Opportunity/fields/Primary_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Primary_Supplier__c</fullName>
    <label>Primary Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belmont</fullName>
            </value>
            <value>
                <fullName>Ancar</fullName>
            </value>
            <value>
                <fullName>Planmecca</fullName>
            </value>
            <value>
                <fullName>Heka</fullName>
            </value>
            <value>
                <fullName>Acteon</fullName>
            </value>
            <value>
                <fullName>Vatech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>