objects/Opportunity/fields/Pro_terms__c.field-meta.xml
<CustomField>
    <fullName>Pro_terms__c</fullName>
    <formula>&quot;test&quot; &amp;  BR() &amp;  &quot;comments&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pro terms</label>
    <type>Text</type>
</CustomField>