objects/Opportunity/fields/Project_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Project_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Sheet</label>
    <referenceTo>Project_Sheet__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>