objects/Opportunity/fields/Purchase_order_number2__c.field-meta.xml
<CustomField>
    <fullName>Purchase_order_number2__c</fullName>
    <label>Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>