objects/Opportunity/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <formula>IF( Purchase_order_number2__c &lt;&gt;&quot;&quot;, Purchase_order_number2__c , 

IF ( Service_Sheet__r.Purchase_Order_Number__c &lt;&gt; &quot;&quot;, Service_Sheet__r.Purchase_Order_Number__c , 
 IF ( Service_Sheet__r.Visit__r.Purchase_Order__c &lt;&gt; &quot;&quot;, Service_Sheet__r.Visit__r.Purchase_Order__c,  Service_Sheet__r.Visit__r.Current_Purchase_Order_No__c ) )
&amp;
IF (  Reactive_Sheet__r.Order_No__c &lt;&gt; &quot;&quot;, Reactive_Sheet__r.Order_No__c,  IF ( Reactive_Sheet__r.Purchase_Order_Number__c &lt;&gt; &quot;&quot;, Reactive_Sheet__r.Purchase_Order_Number__c, 

IF ( Reactive_Sheet__r.Visit__r.Purchase_Order__c &lt;&gt; &quot;&quot;,  Reactive_Sheet__r.Visit__r.Purchase_Order__c,  Reactive_Sheet__r.Visit__r.Current_Purchase_Order_No__c  

&amp;

IF ( Small_Works__r.Order_No__c &lt;&gt; &quot;&quot;, Small_Works__r.Order_No__c,

&quot;&quot;


)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If there is a PO on the SS or RS, we use that, or if blank, the Visit, or if blank the site. Finally, if all others are blank, the parent PO is used. If you want to add a PO number to an opportunity, add it to the service sheet.</inlineHelpText>
    <label>Customer Order Number</label>
    <type>Text</type>
</CustomField>