objects/Opportunity/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>