objects/Opportunity/fields/Reactive_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Reactive_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reactive Sheet</label>
    <referenceTo>Service_Sheet_STD__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>