objects/Opportunity/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Xero Invoice No.</label>
    <length>150</length>
    <type>Text</type>
</CustomField>