objects/Opportunity/fields/Sage_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Sage_Invoice_Date__c</fullName>
    <inlineHelpText>This is the date that will appear on the Sage Invoice</inlineHelpText>
    <label>Sage Invoice Date</label>
    <type>Date</type>
</CustomField>