objects/Opportunity/fields/Sage_Invoice_ddmmyyyy__c.field-meta.xml
<CustomField>
    <fullName>Sage_Invoice_ddmmyyyy__c</fullName>
    <formula>if(Day(Sage_Invoice_Date__c )&lt;10,&apos;0&apos;&amp;text(Day(Sage_Invoice_Date__c )),text(Day(Sage_Invoice_Date__c )))&amp;&apos;-&apos;&amp;
if(month(Sage_Invoice_Date__c )&lt;10,&apos;0&apos;&amp;text(month(Sage_Invoice_Date__c )),text(month(Sage_Invoice_Date__c )))&amp;&apos;-&apos;&amp;
text(year(Sage_Invoice_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sage Invoice ddmmyyyy</label>
    <type>Text</type>
</CustomField>