objects/Opportunity/fields/Sage_Invoice_Number_trial_for_AB_only__c.field-meta.xml
<CustomField>
    <fullName>Sage_Invoice_Number_trial_for_AB_only__c</fullName>
    <label>Sage Invoice Number(trial for AB only)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>