objects/Opportunity/fields/Sage_Invoice_Number_Trial_Only_Number__c.field-meta.xml
<CustomField>
    <fullName>Sage_Invoice_Number_Trial_Only_Number__c</fullName>
    <label>Sage Invoice Number Trial Only Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>