objects/Opportunity/fields/Sales_contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_contact__c</fullName>
    <description>Chester Boyt
John Boyt
Ralph Boyt</description>
    <label>Sales contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chester Boyt</fullName>
            </value>
            <value>
                <fullName>John Boyt</fullName>
            </value>
            <value>
                <fullName>Ralph Boyt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>