objects/Opportunity/fields/Sales_No__c.field-meta.xml
<CustomField>
    <fullName>Sales_No__c</fullName>
    <externalId>true</externalId>
    <label>Sales No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>