objects/Opportunity/fields/Schedule_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Schedule_of_Work__c</fullName>
    <label>Schedule of Work</label>
    <type>TextArea</type>
</CustomField>