objects/Opportunity/fields/Service_Approved_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Service_Approved_Rejected__c</fullName>
    <inlineHelpText>This is for Projects and /or Service to use, to approve opps ready for invoicing.</inlineHelpText>
    <label>Department Approved/On Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>