objects/Opportunity/fields/Service_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Service_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Sheet</label>
    <referenceTo>Engineer_Checklist__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Service_Sheet</relationshipName>
    <type>Lookup</type>
</CustomField>