objects/Opportunity/fields/Service_Sheet_PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Sheet_PDF_Name__c</fullName>
    <formula>&quot;Service Sheet &quot;&amp; Account.Name &amp;&quot; &quot;&amp; Service_Sheet__r.Name &amp;&quot; &quot;&amp;text(day(DATEVALUE
(Service_Sheet__r.CreatedDate)))&amp;&apos;-&apos;&amp;text(Month(DATEVALUE(Service_Sheet__r.CreatedDate)))&amp;&apos;-&apos;
&amp;text(Year(DATEVALUE(Service_Sheet__r.CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Sheet PDF Name</label>
    <type>Text</type>
</CustomField>