objects/Opportunity/fields/Service_Sheets_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Sheets_Creation_Date__c</fullName>
    <label>Service Sheets Creation Date</label>
    <type>Date</type>
</CustomField>