objects/Opportunity/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <formula>IF(Service_Sheet__c &lt;&gt; &quot;&quot;, Service_Sheet__r.Service_Sheet_Type__c, Reactive_Sheet__r.Sheets_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>