objects/Opportunity/fields/Service_Types__c.field-meta.xml
<CustomField>
    <fullName>Service_Types__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Compressor</fullName>
            </value>
            <value>
                <fullName>Getinge Autoclave</fullName>
            </value>
            <value>
                <fullName>Getinge Washer Disinfector</fullName>
            </value>
            <value>
                <fullName>Mechanical X-Ray</fullName>
            </value>
            <value>
                <fullName>Medisafe Washer disinfector</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Report of Examination</fullName>
            </value>
            <value>
                <fullName>Suction Pump</fullName>
            </value>
            <value>
                <fullName>Treatment Centre</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>