objects/Opportunity/fields/Sheet_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Record_Type__c</fullName>
    <label>Sheet Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>