objects/Opportunity/fields/Sheet_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Report_Type__c</fullName>
    <description>This field auto populate the from Maintenance &amp; Reactive object record type</description>
    <inlineHelpText>This field auto populate the from Maintenance &amp; Reactive object record type</inlineHelpText>
    <label>Sheet Report Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>