objects/Opportunity/fields/Shipping_contacttext__c.field-meta.xml
<CustomField>
    <fullName>Shipping_contacttext__c</fullName>
    <label>Shipping contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>