objects/Opportunity/fields/Show_Description__c.field-meta.xml
<CustomField>
    <fullName>Show_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Description</label>
    <type>Checkbox</type>
</CustomField>