objects/Opportunity/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <formula>IF ( Account.Site_Invoice_Name__c &lt;&gt; &quot;&quot;, Account.Site_Invoice_Name__c,Account.Name)&amp;BR()&amp; 
IF ( Account.ShippingStreet &lt;&gt; &quot;&quot;, Account.ShippingStreet&amp;BR(), &quot;&quot;) &amp; 
IF ( Account.ShippingCity &lt;&gt; &quot;&quot;, Account.ShippingCity&amp;BR(), &quot;&quot;) &amp; 
IF ( Account.ShippingState&amp;BR() &lt;&gt; &quot;&quot;, Account.ShippingState&amp; BR(), &quot;&quot;) &amp; 
Account.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Address</label>
    <type>Text</type>
</CustomField>