objects/Opportunity/fields/site_contact_name__c.field-meta.xml
<CustomField>
    <fullName>site_contact_name__c</fullName>
    <label>site contact name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>