objects/Opportunity/fields/Site_Contract__c.field-meta.xml
<CustomField>
    <fullName>Site_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Site Contract Number</inlineHelpText>
    <label>Site Contract</label>
    <referenceTo>SiteContracts__c</referenceTo>
    <relationshipLabel>Service Sheets</relationshipLabel>
    <relationshipName>Service_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>