objects/Opportunity/fields/Site_Contract_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Site_Contract_Numbers__c</fullName>
    <label>Site Contract Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>