objects/Opportunity/fields/Site_Visit_Details__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Details__c</fullName>
    <label>Site Visit / Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>