objects/Opportunity/fields/Site_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Time__c</fullName>
    <label>Site Visit Times</label>
    <type>TextArea</type>
</CustomField>