objects/Opportunity/fields/Small_Works__c.field-meta.xml
<CustomField>
    <fullName>Small_Works__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Small Works</label>
    <referenceTo>Small_Works__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>