objects/Opportunity/fields/Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <label>Special Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>