objects/Opportunity/fields/ss_run_date__c.field-meta.xml
<CustomField>
    <fullName>ss_run_date__c</fullName>
    <description>a date time field for opportunity trigger on service sheet. holds trigger run time.</description>
    <label>ss run date</label>
    <type>DateTime</type>
</CustomField>