objects/Opportunity/fields/Stage_Rep__c.field-meta.xml
<CustomField>
    <fullName>Stage_Rep__c</fullName>
    <formula>Case( StageName ,&apos;Enquiry&apos;,&apos;1.Enquiry&apos;,
&apos;Quote&apos;,&apos;2.Quote&apos;,
&apos;Follow-Up&apos;,&apos;3.Follow-Up&apos;,
&apos;Order Ready&apos;,&apos;4.Order Ready&apos;,
&apos;Order (Order Book)&apos;,&apos;5.Order (Order Book)&apos;,
&apos;Sent&apos;,&apos;6.Sent&apos;,
&apos;Delivery (Invoice Sent)&apos;,&apos;7.Delivery (Invoice Sent)&apos;,&apos;&apos;)</formula>
    <label>Stage Rep</label>
    <type>Text</type>
</CustomField>