objects/Opportunity/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <type>TextArea</type>
</CustomField>