objects/Opportunity/fields/sum_total_sales_rice__c.field-meta.xml
<CustomField>
    <fullName>sum_total_sales_rice__c</fullName>
    <formula>IF(AND(Invoice_Date__c = TODAY(),OR(ISPICKVAL(StageName,&quot;Closed Won&quot;),ISPICKVAL(StageName,&quot;Sent&quot;))),Total_Sales_Price__c,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sum total sales price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>