objects/Opportunity/fields/Technician_Groups__c.field-meta.xml
<CustomField>
    <fullName>Technician_Groups__c</fullName>
    <label>Technician Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>