objects/Opportunity/fields/Technician_ID__c.field-meta.xml
<CustomField>
    <fullName>Technician_ID__c</fullName>
    <formula>Service_Sheet__r.Engineer__r.Engineer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician ID</label>
    <type>Text</type>
</CustomField>