objects/Opportunity/fields/Technician_Name_Reactive__c.field-meta.xml
<CustomField>
    <fullName>Technician_Name_Reactive__c</fullName>
    <label>Technician Name(Reactive)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>