objects/Opportunity/fields/Technician_Name_Service1__c.field-meta.xml
<CustomField>
    <fullName>Technician_Name_Service1__c</fullName>
    <formula>Service_Sheet__r.Engineer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician Name (Service)</label>
    <type>Text</type>
</CustomField>