objects/Opportunity/fields/Technician_s_Comment_to_Service__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Comment_to_Service__c</fullName>
    <label>Technician&apos;s Comment to Service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>