objects/Opportunity/fields/Technician_s_Comments_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Comments_to_Customer__c</fullName>
    <label>Technician&apos;s Comments to Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>