objects/Opportunity/fields/Technician_s_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Technician_s_Recommendations__c</fullName>
    <label>Comments To Compliance Team</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>