objects/Opportunity/fields/Technician_Super_Groups__c.field-meta.xml
<CustomField>
    <fullName>Technician_Super_Groups__c</fullName>
    <label>Technician Super Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>