objects/Opportunity/fields/Technicians_ID__c.field-meta.xml
<CustomField>
    <fullName>Technicians_ID__c</fullName>
    <label>Technician ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>