objects/Opportunity/fields/Technicians_Name_Service__c.field-meta.xml
<CustomField>
    <fullName>Technicians_Name_Service__c</fullName>
    <label>Technician Name (Service)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>