objects/Opportunity/fields/Time_to_Site__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Site__c</fullName>
    <label>Reactive Travel Time to Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>