objects/Opportunity/fields/Total_Product_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Cost_Price__c</fullName>
    <label>Total Product Cost Price</label>
    <summarizedField>OpportunityLineItem.Total_Cost_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>