objects/Opportunity/fields/Total_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_VAT__c</fullName>
    <formula>IF(
DATEVALUE(CreatedDate) &gt;= Date(2020,05,29),
Total_Vat_New__c,
Amount*VAT_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>