objects/Opportunity/fields/Total_VAT_incl_D_H_I__c.field-meta.xml
<CustomField>
    <fullName>Total_VAT_incl_D_H_I__c</fullName>
    <formula>(FLOOR(Amount * 0.20)) + ((Floor(((Amount * 0.20) - FLOOR(Amount * 0.20))*100))/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total VAT (incl D, H &amp; I)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>