objects/Opportunity/fields/Total_Vat_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Vat_New__c</fullName>
    <label>Total VAT</label>
    <summarizedField>OpportunityLineItem.VAT__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>