objects/Opportunity/fields/Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time__c</fullName>
    <label>Service Sheet Travel Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>