objects/Opportunity/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <defaultValue>0.20</defaultValue>
    <inlineHelpText>This field is no longer useful for those opportunity created after 29th May 2020.</inlineHelpText>
    <label>VAT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>