objects/Opportunity/fields/VatExternalReference__c.field-meta.xml
<CustomField>
    <fullName>VatExternalReference__c</fullName>
    <label>VatExternalReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>