objects/Opportunity/fields/VatRateID__c.field-meta.xml
<CustomField>
    <fullName>VatRateID__c</fullName>
    <label>VatRateID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>