objects/Opportunity/fields/Visit_No__c.field-meta.xml
<CustomField>
    <fullName>Visit_No__c</fullName>
    <formula>Service_Sheet__r.Visit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit No</label>
    <type>Text</type>
</CustomField>