objects/Opportunity/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <formula>IF(Service_Sheet__c  &lt;&gt; &apos;&apos;, TEXT(Service_Sheet__r.Visit__r.Visit_Type__c)  , IF( Reactive_Sheet__c  &lt;&gt; &apos;&apos;, TEXT(Reactive_Sheet__r.Visit__r.Visit_Type__c), &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Type</label>
    <type>Text</type>
</CustomField>