objects/Opportunity/fields/Visits_No__c.field-meta.xml
<CustomField>
    <fullName>Visits_No__c</fullName>
    <label>Visit No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>