objects/Opportunity/fields/Xero_Account__c.field-meta.xml
<CustomField>
    <fullName>Xero_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is no longer useful for those opportunity created after 29th May 2020.</inlineHelpText>
    <label>Xero Tax Code</label>
    <referenceTo>Xero_Account__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>