objects/Opportunity/fields/Xero_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice_Number__c</fullName>
    <label>Xero Invoice Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>