objects/Opportunity/fields/Xero_LineItem_Id__c.field-meta.xml
<CustomField>
    <fullName>Xero_LineItem_Id__c</fullName>
    <label>Xero LineItem Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>