objects/Opportunity/fields/Xero_Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Xero_Tax_Type__c</fullName>
    <formula>IF(VAT_Rate__c==0.20,&apos;OUTPUT&apos;,IF(OR(ISNULL(VAT_Rate__c),VAT_Rate__c==0),&apos;NONE&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Xero Tax Type</label>
    <type>Text</type>
</CustomField>