objects/Opportunity/fields/XeroOppId__c.field-meta.xml
<CustomField>
    <fullName>XeroOppId__c</fullName>
    <label>Xero Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>