objects/Opportunity/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <businessProcess>Sales Process</businessProcess>
    <description>Opportunities created when converting lead</description>
    <label>Sales</label>
</RecordType>