objects/Opportunity/recordTypes/Sheets.recordType-meta.xml
<RecordType>
    <fullName>Sheets</fullName>
    <active>true</active>
    <businessProcess>Sales Process</businessProcess>
    <description>Opportunities created through Service Sheets- Reactive Sheets</description>
    <label>Invoice (Sheets)</label>
</RecordType>