objects/Opportunity/recordTypes/To_Invoice.recordType-meta.xml
<RecordType>
    <fullName>To_Invoice</fullName>
    <active>true</active>
    <businessProcess>Order Form</businessProcess>
    <description>Opportunities layout to create an invoice</description>
    <label>Invoice (To Invoice)</label>
</RecordType>