objects/Opportunity/validationRules/Account_Must_Be_Live.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Must_Be_Live</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNEW(),Text(Account.Account_Status__c)!=&apos;Live&apos;, RecordTypeId!=&apos;01258000000M0Fz&apos;)</errorConditionFormula>
    <errorMessage>Selected Account Status Must be Live.</errorMessage>
</ValidationRule>