objects/Opportunity/validationRules/Account_Name_IsEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_IsEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(AccountId),
    ISBLANK(AccountId)
)</errorConditionFormula>
    <errorMessage>Please Enter the Account Name!</errorMessage>
</ValidationRule>